# mirs_mg5

./: README.md
mirs/: CMakeLists.txt  package.xml
mirs/config/: config.yaml  ekf_global_params.yaml  ekf_odom_only.yaml  ekf_params.yaml  nav2_params.yaml  slam_toolbox_config.yaml
mirs/launch/: mirs.launch.py  mirs_minimum.launch.py  mirs_odom_only.launch.py  navigation.launch.py  pc_slam.launch.py  system_bringup.launch.py  system_bringup_odom_only.launch.py
mirs/maps/: my_mirs_map.pgm  my_mirs_map.yaml
mirs/rviz/: default.rviz  system_view.rviz
mirs/scripts/: odom_linear_test.py  odom_rotate_test.py  trajectory_publisher.py
mirs/src/: basic_command.cpp  encoder_reset.cpp  odometry_publisher.cpp  parameter_publisher.cpp  parameter_update.cpp  reboot.cpp  test.cpp
mirs_msgs/: CMakeLists.txt  package.xml
